# Conformal-Variable-Horizon-and-Confidence-Aware-Variable-Admittance-Control

./: README.md
anticipatory_exoskeleton_gravity_compensation/: README.md
anticipatory_exoskeleton_gravity_compensation/admit/: CMakeLists.txt  package.xml  setup.py
anticipatory_exoskeleton_gravity_compensation/admit/config/: admit_config.yaml
anticipatory_exoskeleton_gravity_compensation/admit/launch/: admit.launch
anticipatory_exoskeleton_gravity_compensation/admit/scripts/: admit_controller.py  human_playback.py
anticipatory_exoskeleton_gravity_compensation/classification/: CMakeLists.txt  package.xml  setup.py
anticipatory_exoskeleton_gravity_compensation/classification/config/: TaskClassModel.pt  TaskClassModel_config.yaml  class_config.yaml
anticipatory_exoskeleton_gravity_compensation/classification/launch/: classifier.launch
anticipatory_exoskeleton_gravity_compensation/classification/scripts/: classifier.py
anticipatory_exoskeleton_gravity_compensation/gui/: CMakeLists.txt  package.xml
anticipatory_exoskeleton_gravity_compensation/gui/config/: gui_config.yaml
anticipatory_exoskeleton_gravity_compensation/gui/launch/: gui.launch
anticipatory_exoskeleton_gravity_compensation/gui/scripts/: GravityCompGui.py  info_collector.py
anticipatory_exoskeleton_gravity_compensation/predict_eval/: CMakeLists.txt  package.xml  setup.py
anticipatory_exoskeleton_gravity_compensation/predict_eval/config/: predict_eval_config.yaml
anticipatory_exoskeleton_gravity_compensation/predict_eval/launch/: predict_eval.launch
anticipatory_exoskeleton_gravity_compensation/predict_eval/scripts/: predict_eval_node.py  var_train_GravityComp.py
anticipatory_exoskeleton_gravity_compensation/protocol/: CMakeLists.txt  package.xml
anticipatory_exoskeleton_gravity_compensation/protocol/config/: protocol_config.yaml
anticipatory_exoskeleton_gravity_compensation/protocol/launch/: pipeline.launch  pipeline_no_hardware.launch  protocol.launch
anticipatory_exoskeleton_gravity_compensation/protocol/scripts/: protocol_controller.py  session_generator.py
anticipatory_exoskeleton_gravity_compensation/rehab_msgs/: CMakeLists.txt  package.xml
anticipatory_exoskeleton_gravity_compensation/rehab_msgs/msg/: ClassProbability.msg  ClassificationInfo.msg  ClassificationOutput.msg  ConformalSetElementwise.msg  ConformalSetRadial.msg  ConformalSetTrajElementwise.msg  ConformalSetTrajRadial.msg  EMGActivations.msg  GUIInfo.msg  ProtocolState.msg  RPYCommand.msg  RPYState.msg
anticipatory_exoskeleton_gravity_compensation/robot_policy/: CMakeLists.txt  package.xml  setup.py
guided_target_reaching_task/: CMakeLists.txt  README.md  package.xml  setup.py
guided_target_reaching_task/config/: admit_config.yaml  guide_config.yaml  ik_config.yaml  logger_config.yaml  mint_conf_config.yaml  sm_config.yaml  viz_config.yaml
guided_target_reaching_task/launch/: admit.launch  exp_pipeline.launch  exp_sm.launch  general_logger.launch  guide.launch  ik.launch  mint_conf.launch  quantile_server.launch  vis_conf.launch
guided_target_reaching_task/msg/: ACICompact.msg  ACISample.msg  AdmitRecordStateStamped.msg  EquilibriumState.msg  FullAdmitState.msg  FullFitIO.msg  GuideState.msg  ICPCompact.msg  ICPSample.msg  ICPTrajectory.msg  IKmsg.msg  MIntConfRecordStateStamped.msg  RecordStateStamped.msg
guided_target_reaching_task/scripts/: admit.py  admit_lib.py  exp_state_machine.py  general_logger.py  gui_node_pyqt.py  guide_node.py  mint_conf.py  quantile_server.py  session_generator.py  utils.py
guided_target_reaching_task/scripts/res/: calibration_session_group.yaml  experiment_session_group.yaml
guided_target_reaching_task/scripts/res/models/: mint_dcond_acc_guide_robust_100hz_60_s.pt  mint_dcond_acc_guide_robust_100hz_60_s_hyper_params.json
guided_target_reaching_task/src/: ik_node.cpp
guided_target_reaching_task/srv/: GetCurrentPoseVector.srv  GetQuantiles.srv  GetStepSizes.srv  GetUserIntentBounds.srv  forward_kinematics.srv  inverse_kinematics.srv
(+26 files in other folders)
